# rust-Aaja-game-engine-web

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  justfile  package-lock.json  package.json  playwright.config.mjs  styles.css  tsconfig.base.json  tsconfig.examples.json
bootstrap/: chunk-00  chunk-01  chunk-02  chunk-03  chunk-04  chunk-05  chunk-06  chunk-07
crates/core/: Cargo.toml
crates/core/src/: lib.rs  math.rs  presets.rs  scene.rs  voices.rs
demo/: benchmark.html  front-back.html  index.html  package.json  styles.css
docs/: api.md  architecture.md  audio-assets.md  audio-materialization-trigger.md  benchmark-results-2026-07-16.md  benchmark.md  ci-validation.md  limitations.md  pages-live-check.md  pages-validation-trigger.md  public-site.md  technology-evaluation.md  verification.md
engine/: assets.d.ts  assets.d.ts.map  assets.js  assets.js.map  diagnostics.d.ts  diagnostics.d.ts.map  diagnostics.js  diagnostics.js.map  engine.d.ts  engine.d.ts.map  engine.js  engine.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  mixer.d.ts  mixer.d.ts.map  mixer.js  mixer.js.map  room.d.ts  room.d.ts.map  room.js  room.js.map  source.d.ts  source.d.ts.map  source.js  source.js.map  types.d.ts  types.d.ts.map  utils.d.ts  utils.d.ts.map  utils.js  utils.js.map  wasm-bridge.d.ts  wasm-bridge.d.ts.map  wasm-bridge.js  wasm-bridge.js.map
scripts/: clean.mjs  consumer-browser-smoke.mjs  copy-demo.mjs  copy-wasm.mjs  finalize-real-audio-lab.py  finalize-real-audio-trigger.txt  full-benchmark.mjs  package-smoke.mjs  (+1 more)
(+44 files in other folders)
