[package]
name = "aaja-audio-game-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Deterministic Rust/WASM scene core for the Aaja accessible browser audio engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
